test/error/error.input093.zc
Unknown variable or function:fred on line 1
